--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="card">
         <div class="cosaACaso">
           Questa è una card vuota, non so cosa inserire qui dentro. La specchio
-          ed evito di scrivere 2 volte.
+          ed evito di scrivere 2 contenuti.
         </div>
       </div>
     </main>
